--- a/client/.env.production
+++ b/client/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:5001/api
+REACT_APP_API_URL=https://vetbot-api.onrender.com/api
 REACT_APP_CHATBOT_TITLE=Veterinary Assistant
 REACT_APP_ENVIRONMENT=production
