--- a/netlify.toml
+++ b/netlify.toml
@@ -4,13 +4,13 @@
   command = "npm run build"
 
 [build.environment]
-  REACT_APP_API_URL = "https://your-api-domain.com/api"
+  REACT_APP_API_URL = "https://vetbot-l3wc.onrender.com/api"
   REACT_APP_CHATBOT_TITLE = "Veterinary Assistant"
   REACT_APP_ENVIRONMENT = "production"
 
 [[redirects]]
   from = "/api/*"
-  to = "https://your-api-domain.com/api/:splat"
+  to = "https://vetbot-l3wc.onrender.com/api/:splat"
   status = 200
 
 [[redirects]]
